# clap-sort

./: Cargo.toml  LICENSE  README.md  USAGE.md
cli/: Cargo.toml
cli/src/: main.rs
examples/: sorted.rs  unsorted.rs
src/: lib.rs
