[package]
name = "clap-sort"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["jdx"]
description = "Validate that clap Subcommand enums are sorted alphabetically"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jdx/clap-sort"
documentation = "https://docs.rs/clap-sort"
homepage = "https://github.com/jdx/clap-sort"
keywords = ["clap", "validation", "cli", "sorting", "subcommands"]
categories = ["command-line-utilities", "development-tools"]
include = ["examples/**/*.rs", "src/**/*.rs", "Cargo.toml"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "visit"] }
