[package]
name = "clap-sort"
version = "1.0.3"
edition = "2024"
rust-version = "1.88"
authors = ["jdx"]
description = "Validate that clap Subcommand enums are sorted alphabetically"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jdx/clap-sort"
documentation = "https://docs.rs/clap-sort"
homepage = "https://github.com/jdx/clap-sort"
keywords = ["clap", "validation", "cli", "sorting", "subcommands"]
categories = ["command-line-utilities", "development-tools"]
include = ["examples/**/*.rs", "src/**/*.rs", "Cargo.toml"]

[dependencies]
clap = "4.5"

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
