[package]
name = "clap-sort-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["jdx"]
description = "CLI tool to validate that clap Subcommand enums are sorted alphabetically"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jdx/clap-sort"
documentation = "https://docs.rs/clap-sort"
homepage = "https://github.com/jdx/clap-sort"
keywords = ["clap", "validation", "cli", "sorting"]
categories = ["command-line-utilities", "development-tools"]
include = ["src/**/*.rs", "Cargo.toml"]

[dependencies]
clap-sort = { path = ".." }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
